--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,10 @@ THE SOFTWARE.
 -->
 
 
-<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">  
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	 xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+	 version="6.0">
   <display-name>clusterjsp</display-name>
   <distributable/>
   <servlet>
@@ -41,6 +44,9 @@ THE SOFTWARE.
   </servlet>
   <session-config>
     <session-timeout>30</session-timeout>
+    <cookie-config>
+        <name>clusterjsp-sessionid</name>
+    </cookie-config>
   </session-config>
   <welcome-file-list>
     <welcome-file>cluster.jsp</welcome-file>
